syntax = "proto3";

option csharp_namespace = "Newinfosoft.ChineseHistory.Server.ServiceBase";

package chinesehistory;

// 枚举：图层类型
enum LayerType {
  UNKNOWN = 0;
  CITY = 1;
  EVENT = 2;
  TERRITORY = 3;
  ROUTE = 4;
}

// 枚举：历史纪年类型
enum CalendarType {
  GREGORIAN = 0;      // 公元纪年
  LUNAR = 1;          // 农历
  ERA_NAME = 2;       // 年号
  DYNASTY_RANGE = 3;  // 朝代模糊区间
}

// 历史日期结构
message HistoricalDate {
  CalendarType calendar_type = 1; // 纪年类型
  string era_name = 2;      // 年号名称，如"贞观"
  int32 era_year = 3;       // 年号第几年，例如5年
  int32 era_month = 4;      // 月份
  int32 era_day = 5;        // 日期
  string dynasty = 6;       // 朝代名称（模糊区间用）
  string period = 7;        // 时期名称（如"东汉末年"）
  string iso_date = 8;      // 公元日期（如 763-02-17）
  string lunar_date = 9;    // 农历表示（如 "癸卯年闰三月初五"）
}

// 请求结构：按历史时间范围获取图层
message GetLayersRequest {
  HistoricalDate start = 1; // 起始时间
  HistoricalDate end = 2;   // 结束时间
}

// 图层元素结构
message LayerItem {
  string id = 1;
  string name = 2;
  LayerType type = 3;
  string geometry_json = 4;
  string start_date = 5;
  string end_date = 6;
  repeated string tags = 7;
}

// 返回结构
message GetLayersResponse {
  repeated LayerItem items = 1;
}

service LayerService {
  rpc GetLayers(GetLayersRequest) returns (GetLayersResponse);
} 